@@ -1404,7 +1404,7 @@
       <properties>
         <testAdditionalRuntimeArgLine>--illegal-access=permit --add-exports
 					java.base/sun.nio.ch=ALL-UNNAMED --add-exports
-					java.base/jdk.internal.ref=ALL-UNNAMED
+					java.base/jdk.internal.ref=ALL-UNNAMED --add-opens java.base/java.lang=org.drools.core
 					--add-opens java.base/java.util=ALL-UNNAMED --add-opens
 					java.base/java.lang=ALL-UNNAMED --add-opens
 					java.base/java.lang.reflect=ALL-UNNAMED --add-opens java.base/java.util=com.hack23.cia.web
@@ -1426,7 +1426,7 @@
       <properties>
         <testAdditionalRuntimeArgLine>--illegal-access=permit --add-exports
 					java.base/sun.nio.ch=ALL-UNNAMED --add-exports
-					java.base/jdk.internal.ref=ALL-UNNAMED
+					java.base/jdk.internal.ref=ALL-UNNAMED --add-opens java.base/java.lang=org.drools.core
 					--add-opens java.base/java.util=ALL-UNNAMED --add-opens
 					java.base/java.lang=ALL-UNNAMED --add-opens
 					java.base/java.lang.reflect=ALL-UNNAMED --add-opens java.base/java.util=com.hack23.cia.web
